styled modal content

--- a/src/front/styles/whats_my_size.css
+++ b/src/front/styles/whats_my_size.css
@@ -2,17 +2,35 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: Helvetica Now Text;
+    font-family: Helvetica-Now-Text-Regular,Helvetica,Arial,sans-serif;
+    color: #86888b;
+}
+
+.modal-header {
+    border-bottom: none;
+}
+
+.modal-header-text {
+    text-align: center;
+    font-size: 16px;
+    color: black;
+    font-weight: bold;
+}
+
+.modal-footer {
+    display:flex;
+    justify-content: center;
 }
 .gender-options {
     display: flex;
     justify-content: center;
     font-size: 16px;
+    margin-bottom: 40px;
 }
 
 .gender-options label {
     cursor: pointer;
-    margin: 30px;
+    margin: 0px 30px;
 }
 
 
@@ -47,4 +65,77 @@
     height: 12px;
     width: 12px;
     margin-right: 8px;
+}
+
+.hide {
+    display: none;
+}
+
+.measurements input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin-right: 10px;
+}
+
+.measurements {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.measurements > div{
+    width: 50%;
+    text-align: center;
+}
+
+.measurements > div > p {
+    text-align: left;
+    margin-left: 10%
+}
+
+.measurements > div > input {
+    width: 75%;
+}
+
+.measurements ::placeholder {
+    color: lightgray;
+}
+.half-width {
+    width: 35% !important;
+}
+
+.system-toggle-buttons {
+    text-align: right;
+    margin-right: 30px;
+}
+
+.system-toggle-buttons input{
+    opacity: 0;
+    position: absolute;
+}
+
+.system-toggle-buttons span {
+    margin-right: 10px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.show-size-button {
+    color: white;
+    background-color: gray;
+    font-size: 18px;
+    width: 90%;
+}
+
+.modal-body > div > p {
+    margin-left: 11%
+}
+
+.close-button {
+    background-color: white;
+    border: none;
+    font-size: 19px;
 }
