--- a/src/front/styles/size_and_color.css
+++ b/src/front/styles/size_and_color.css
@@ -60,3 +60,31 @@ outline: 2px solid cornflowerblue;
     display:flex;
     align-items: top;
 }
+
+.expand-options-checkbox input {
+    opacity: 0%;
+    position: absolute;
+}
+
+@media (max-width: 450px) {
+    .color-radio-container {
+        margin-left: 4%;
+    }
+    .color-radio {
+        overflow: scroll;
+        max-width: 95%;
+        align-items: center;
+
+    }
+
+    .color-radio input + img {
+        width: 35px;
+        height: 35px;
+    }
+    
+    .expand-options-checkbox {
+        display: none;
+    }
+
+    
+}
