--- a/src/front/styles/waist_and_length.css
+++ b/src/front/styles/waist_and_length.css
@@ -33,20 +33,34 @@
     opacity: 0;
 }
 
-.size-radio input + span {
+.size-radio input + div {
     padding: 3px;
     width: 50px;
     height: 50px;
     border-radius: 10%;
     cursor: pointer;
     margin-right: 0.5rem;
+    margin-top: 1px;
+    margin-bottom: 1px;
   }
 
-.size-radio input:checked + span {
+.size-radio input:checked + div {
 outline: 1px solid black;
 } 
 
-.expand-options-checkbox input {
+/* .expand-options-checkbox input {
     opacity: 0%;
     position: absolute;
+} */
+
+
+@media (max-width: 450px) {
+    .size-radio {
+        overflow: scroll;
+    }
+
+    .size-radio input + div {
+        padding: 16px;
+        outline: solid thin whitesmoke;
+    }
 }
