--- a/src/front/styles/size_and_color.css
+++ b/src/front/styles/size_and_color.css
@@ -74,7 +74,7 @@ outline: 2px solid cornflowerblue;
         overflow: scroll;
         max-width: 95%;
         align-items: center;
-
+        height: 8vh;
     }
 
     .color-radio input + img {
