--- a/src/front/styles/waist_and_length.css
+++ b/src/front/styles/waist_and_length.css
@@ -56,7 +56,8 @@ outline: 1px solid black;
 
 @media (max-width: 450px) {
     .size-radio {
-        overflow: scroll;
+        overflow: scroll; 
+        height: 8vh;
     }
 
     .size-radio input + div {
