--- a/src/front/styles/waist_and_length.css
+++ b/src/front/styles/waist_and_length.css
@@ -34,9 +34,10 @@
 }
 
 .size-radio input + div {
+    text-align: center;
     padding: 3px;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     border-radius: 10%;
     cursor: pointer;
     margin-right: 0.5rem;
@@ -63,5 +64,7 @@ outline: 1px solid black;
     .size-radio input + div {
         padding: 16px;
         outline: solid thin whitesmoke;
+        width: 50px;
+        height: 50px;
     }
 }
