--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,9 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
