--- a/src/front/styles/add_to_bag.css
+++ b/src/front/styles/add_to_bag.css
@@ -35,16 +35,13 @@
     font-weight: bold;
 }
 
-@media (max-width: 450px) {
+/* @media (min-width: 450px) {
     .hide-in-mobile-view {
         display: none;
     }
-}
+} */
 
-@media (min-width: 450px) {
-    .hide-in-webview {
-        display: none;
-    }
+@media (max-width: 450px) {
 
     .favorite-button {
         width: 20%;
