--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -13,4 +13,15 @@
   height: 630.39px;
 }
 
+@media (min-width: 450px) {
+  .hide-in-web-view {
+      display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .hide-in-mobile-view {
+      display: none;
+  }
+}
 
