--- a/src/front/styles/shipping_and_quantity.css
+++ b/src/front/styles/shipping_and_quantity.css
@@ -1,9 +1,14 @@
+.shipping-quantity-container {
+    margin-left: 15px;
+    margin-top: 5vh;
+}
 .shipping-radio {
     display: flex;
     justify-content: space-between; 
     flex-direction: column;
     margin-top: 2vh;
 }
+
 
 
 
@@ -20,7 +25,25 @@
     font-size: 12px;
 }
 
+.quantity-counter {
+    display: flex;
+    justify-content: flex-end;
+}
 
+.quantity-counter button {
+    margin: 0 10vw;
+}
+
+.quantity-counter button {
+    background-color: inherit;
+    font-weight: bold;
+    border: none;
+}
+
+.quantity-container {
+    display: flex;
+    align-items: center;
+}
 
 @media (min-width: 450px) {
     .shipping-radio {
@@ -54,31 +77,27 @@
         justify-content: center;
         font-size: 14px;
     }
+    
 } 
 
-.quantity-counter {
-    display: flex;
-    justify-content: flex-end;
-}
 
-.quantity-counter button {
-    margin: 0 10vw;
-}
-
-.quantity-counter button {
-    background-color: inherit;
-    font-weight: bold;
-    border: none;
-}
 
 @media (max-width: 450px) {
 
     .shipping-radio label{
         display: flex;
         align-items: flex-start;
+        margin-bottom: 2vh;
+        margin-top: 2vh;
     }
 
     .shipping-radio input {
         margin-right: 3vw;
     }
+
+    .quantity-container {
+        justify-content: space-between;
+    }
+
+   
 }
