fixed whitespace on right

--- a/src/front/styles/shipping_and_quantity.css
+++ b/src/front/styles/shipping_and_quantity.css
@@ -1,6 +1,7 @@
 .shipping-quantity-container {
     margin-left: 15px;
     margin-top: 5vh;
+    max-width: 100vw;
 }
 .shipping-radio {
     display: flex;
@@ -53,6 +54,7 @@
     .shipping-radio input {
         opacity: 0%;
         position: absolute;
+        left: 0;
     }
 
 
