--- a/src/front/styles/archive_recommendation/recommendation_list_item.css
+++ b/src/front/styles/archive_recommendation/recommendation_list_item.css
@@ -15,6 +15,8 @@
 .recommendation-list-item-details {
   font-family: Helvetica;
   font-size: 14px;
+  padding-top: 3px;
+  padding-bottom: 10px;
 }
 
 .recommendation-list-item-details > div {
