--- a/src/front/styles/archive_recommendation/retired_favorite.css
+++ b/src/front/styles/archive_recommendation/retired_favorite.css
@@ -1,31 +1,34 @@
 .retired-like-button {
-    width: 49px;
-    height: 40px;
-    margin: 13px 30px 29px 7px;
-    padding: 13px 16px 12px 17px;
-    border-radius: 8px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border: solid 1px #000;
-    background-color: #fff;
-  }
+  width: 49px;
+  height: 40px;
+  margin: 13px 30px 29px 7px;
+  padding: 13px 16px 12px 17px;
+  border-radius: 8px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border: solid 1px #000;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .retired-favorite-container {
-    display: flex;
-  }
+.retired-favorite-container {
+  display: flex;
+}
 
-  .retired-favorite-container > div {
-    width: 283px;
-    height: 26px;
-    margin: 25px 16px 31px 12px;
-    /* padding: 0 9px 13px 260px; */
-    font-family: Helvetica;
-    font-size: 11px;
-    font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #000;
-    text-decoration: underline;
-  }
+.retired-favorite-container > div {
+  width: 283px;
+  height: 26px;
+  margin: 25px 16px 31px 12px;
+  /* padding: 0 9px 13px 260px; */
+  font-family: Helvetica;
+  font-size: 11px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+  text-decoration: underline;
+}
