--- a/src/front/styles/archive_recommendation/archive_match_score.css
+++ b/src/front/styles/archive_recommendation/archive_match_score.css
@@ -24,3 +24,11 @@
 
 .fill-chart {
 }
+
+.circle_reactGradientProgress__1_0UG {
+}
+
+#circle_reactGradientProgressPercentage__3mR2b ::before {
+  content: "A";
+  color: #a8122f;
+}
