--- a/src/front/styles/archive_recommendation/recommendation_list_item.css
+++ b/src/front/styles/archive_recommendation/recommendation_list_item.css
@@ -8,8 +8,9 @@
 }
 
 .recommendation-list-item-image img {
-  width: 100%;
-  height: auto;
+  width: 188px;
+  height: 250px;
+  object-fit: cover;
 }
 
 .recommendation-list-item-details {
