--- a/src/front/styles/archive_recommendation/archive_match_score.css
+++ b/src/front/styles/archive_recommendation/archive_match_score.css
@@ -26,11 +26,16 @@
 }
 
 .circle_reactGradientProgress__1_0UG {
+  /* margin-top: -10px; */
+}
+
+.circle_reactGradientProgressPercentageSpan__1HdhL {
+  margin-top: -6px;
 }
 
 #circle_reactGradientProgressPercentage__3mR2b ::before {
   content: "A";
   color: #a8122f;
   padding-top: 10px;
-  margin-bottom: 0;
+  margin-bottom: -6px;
 }
